--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^9.17.2"
+		"firebase": "^9.17.2",
+		"firebase-admin": "^11.5.0"
 	}
 }
