--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "@faker-js/faker": "^7.6.0",
   "@sveltejs/adapter-auto": "^2.0.0",
   "@sveltejs/kit": "^1.5.0",
-  "svelte": "^3.54.0",
+  "svelte": "^3.58.0",
   "svelte-check": "^3.0.1",
   "tslib": "^2.4.1",
   "typescript": "^4.9.3",
@@ -22,6 +22,7 @@
  "type": "module",
  "dependencies": {
   "firebase": "^9.17.2",
-  "firebase-admin": "^11.5.0"
+  "firebase-admin": "^11.5.0",
+  "sveltestrap": "^5.10.0"
  }
 }
